CB-13447 validation of multiple subnets of gateway group, not to allow multiple subnets from an availability zone for load balancers